# WavyBackgrounds

./: .gitignore  README.md
WavyBackgroundsApp/WavyBackgrounds/: AppDelegate.swift  ViewController.swift  WavyBackgrounds-Bridging-Header.h  WavyBackgrounds.h
WavyBackgroundsApp/WavyBackgrounds.xcodeproj/: project.pbxproj
WavyBackgroundsApp/WavyBackgrounds.xcodeproj/project.xcworkspace/xcuserdata/philippremy.xcuserdatad/: UserInterfaceState.xcuserstate
WavyBackgroundsApp/WavyBackgrounds.xcodeproj/xcshareddata/xcschemes/: WavyBackgrounds.xcscheme
WavyBackgroundsApp/WavyBackgrounds.xcodeproj/xcuserdata/philippremy.xcuserdatad/xcschemes/: xcschememanagement.plist
WavyBackgroundsApp/WavyBackgrounds/Assets.xcassets/AppIcon.appiconset/: Contents.json
WavyBackgroundsApp/WavyBackgrounds/Base.lproj/: Main.storyboard
WavyBackgroundsClient/: package.json
WavyBackgroundsClient/src/: App.css  App.tsx  styles.css
WavyBackgroundsClient/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
WavyBackgroundsClient/src-tauri/icons/: icon.icns
WavyBackgroundsClient/src-tauri/src/: main.rs
WavyBackgroundsClient/src/Components/: Option.css  Option.tsx
libDynamicWallpapaper/: Cargo.toml  build.rs
libDynamicWallpapaper/LoginItemCheck/: LoginItem.h  LoginItem.m
libDynamicWallpapaper/src/: lib.rs
libResourceManager/: Cargo.toml
libResourceManager/src/: lib.rs
libVisualPanic/: Cargo.toml
libVisualPanic/src/: lib.rs
libWavyBackgrounds/WavyBackgrounds/: WavyBackgrounds.m
libWavyBackgrounds/WavyBackgrounds.xcodeproj/: project.pbxproj
libWavyBackgrounds/WavyBackgrounds.xcodeproj/project.xcworkspace/xcuserdata/philippremy.xcuserdatad/: UserInterfaceState.xcuserstate
libWavyBackgrounds/libWavyBackgrounds.xcodeproj/: project.pbxproj
libWavyBackgrounds/libWavyBackgrounds.xcodeproj/project.xcworkspace/xcuserdata/philippremy.xcuserdatad/: WorkspaceSettings.xcsettings
libWavyBackgrounds/libWavyBackgrounds.xcodeproj/xcshareddata/xcschemes/: WavyBackgrounds.xcscheme
libWavyBackgrounds/libWavyBackgrounds.xcodeproj/xcuserdata/philippremy.xcuserdatad/xcschemes/: xcschememanagement.plist
