[package]
name = "libResourceManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
rusqlite = { version = "0.29.0", features = ["blob", "bundled"]}
plist = "1.6.0"
serde = { version = "1.0.191", features = ["derive"] }
libVisualPanic = { path = "../libVisualPanic" }
tauri = { version = "1.5", features = [ "dialog-all", "shell-open", "dialog"] }
serde_json = "1.0"
curl = { version = "0.4.44", features = ["static-curl", "http2"] }
directories = "5.0.1"