[package]
name = "WavyBackgrounds"
version = "0.1.0"
description = "A Tauri App"
authors = ["Philipp Remy"]
license = "MIT"
repository = "https://github.com/philippremy/WavyBackgrounds.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "dialog-all", "shell-open", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libResourceManager = { path = "../../libResourceManager" }
libVisualPanic = { path = "../../libVisualPanic" }
libDynamicWallpapaper = { path = "../../libDynamicWallpapaper" }
once_cell = "1.18.0"
icrate = { version = "0.0.4", features = ["AppKit", "AppKit_NSWindow"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
