[package]
name = "WavyBackgrounds"
version = "0.1.2"
description = "An app to imitate the dynamic backgrounds from macOS Sonoma"
authors = ["Philipp Remy"]
license = "GPL-3.0-or-later"
repository = "https://github.com/philippremy/WavyBackgrounds.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
os_type = "2.6.0"

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "dialog-all", "shell-open", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libResourceManager = { path = "../../libResourceManager" }
libDynamicWallpapaper = { path = "../../libDynamicWallpapaper" }
once_cell = "1.18.0"
icrate = { version = "0.0.4", features = ["AppKit", "AppKit_NSWindow"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
